# ShivaVG

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  Config.cmake.in  MYTODO  README  README.md  TODO  codefmt.sh  config.h.in  configure.in  shivavg.pc.in
cmake/modules/: FindANSIC.cmake  FindOpenVG.cmake  FindShivaVG.cmake
examples/: CMakeLists.txt  Makefile.am  Makefile.in  img_data.c  milano5_data.c  test  test.c  test.h  test_blend.c  test_clock.c  test_color.c  test_colormatrix.c  test_compositing.c  test_convolve.c  test_dash.c  test_eb.c  test_flowers.c  test_gaussianblur.c  test_gaussianblur2.c  test_gradient.c  test_image.c  test_image_mode.c  test_interpolate.c  test_linear.c  test_lookup.c  test_lookup2.c  test_lookup_single.c  test_path.c  test_pattern.c  test_porterduff.c  test_radial.c  test_separableconvolve.c  test_srgb.c  test_stress.c  test_subwaymap.c  test_tiger.c  test_tiger_paths.c  test_tiling_mode.c  test_vgu.c  test_warp.c
projects/visualc7/: TestImage.vcproj
projects/visualc8/: test_image.vcproj
src/: CMakeLists.txt  Config.cmake.in  Makefile.in  shArrayBase.h  shArrays.c  shArrays.h  shCommons.c  shContext.c  shContext.h  shDefs.h  shExtensions.c  shExtensions.h  shGeometry.c  shGeometry.h  shImage.c  shImage.h  shMath.c  shMath.h  shPaint.c  shPaint.h  shParams.c  shPath.c  shPath.h  shPipeline.c  shVectors.c  shVectors.h  shVgu.c
